Posfixo/posfixo.output
Não-terminais inúteis na gramática

   logic1
   logic2


Terminais não utilizados na gramática

   OR
   ABRE_PARENTESES
   FECHA_PARENTESES
   AND
   IDENT_B


Regras inúteis na gramática

    9 expressao: logic1

   10 logic1: logic1 AND logic2
   11       | logic1 OR logic2

   12 logic2: IDENT_B


Gramática

    0 $accept: expressao $end

    1 expressao: expr

    2 expr: expr MAIS termo
    3     | expr MENOS termo
    4     | termo

    5 termo: termo ASTERISCO fator
    6      | termo DIV fator
    7      | fator

    8 fator: IDENT


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IDENT (258) 8
MAIS (259) 2
MENOS (260) 3
OR (261)
ASTERISCO (262) 5
DIV (263) 6
ABRE_PARENTESES (264)
FECHA_PARENTESES (265)
AND (266)
IDENT_B (267)


Não-terminais com as regras onde eles aparecem

$accept (13)
    à esquerda: 0
expressao (14)
    à esquerda: 1, à direita: 0
expr (15)
    à esquerda: 2 3 4, à direita: 1 2 3
termo (16)
    à esquerda: 5 6 7, à direita: 2 3 4 5 6
fator (17)
    à esquerda: 8, à direita: 5 6 7


State 0

    0 $accept: . expressao $end

    IDENT  deslocar, e ir ao estado 1

    expressao  ir ao estado 2
    expr       ir ao estado 3
    termo      ir ao estado 4
    fator      ir ao estado 5


State 1

    8 fator: IDENT .

    $padrão  reduzir usando a regra 8 (fator)


State 2

    0 $accept: expressao . $end

    $end  deslocar, e ir ao estado 6


State 3

    1 expressao: expr .
    2 expr: expr . MAIS termo
    3     | expr . MENOS termo

    MAIS   deslocar, e ir ao estado 7
    MENOS  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 1 (expressao)


State 4

    4 expr: termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 9
    DIV        deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 4 (expr)


State 5

    7 termo: fator .

    $padrão  reduzir usando a regra 7 (termo)


State 6

    0 $accept: expressao $end .

    $padrão  aceitar


State 7

    2 expr: expr MAIS . termo

    IDENT  deslocar, e ir ao estado 1

    termo  ir ao estado 11
    fator  ir ao estado 5


State 8

    3 expr: expr MENOS . termo

    IDENT  deslocar, e ir ao estado 1

    termo  ir ao estado 12
    fator  ir ao estado 5


State 9

    5 termo: termo ASTERISCO . fator

    IDENT  deslocar, e ir ao estado 1

    fator  ir ao estado 13


State 10

    6 termo: termo DIV . fator

    IDENT  deslocar, e ir ao estado 1

    fator  ir ao estado 14


State 11

    2 expr: expr MAIS termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 9
    DIV        deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 2 (expr)


State 12

    3 expr: expr MENOS termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 9
    DIV        deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 3 (expr)


State 13

    5 termo: termo ASTERISCO fator .

    $padrão  reduzir usando a regra 5 (termo)


State 14

    6 termo: termo DIV fator .

    $padrão  reduzir usando a regra 6 (termo)
